# FlowCabal

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  design_doc.typ  package.json  pnpm-workspace.yaml  skills-lock.json  tsconfig.json
.github/workflows/: release.yml
backend/: alembic.ini  pyproject.toml
backend/examples/: sample_workflow.json
backend/flowcabal/: __init__.py  agents.py  cli.py  config.py  curate.py  db.py  db_models.py  engine.py  keystore.py  llm.py  models.py  viking.py
backend/flowcabal/agent/: builder.py  context.py  core.py  monitor.py
backend/flowcabal/migrations/: env.py
backend/flowcabal/migrations/versions/: 0001_initial.py
backend/flowcabal/models/: __init__.py  node.py  textblock.py  workflow.py
backend/flowcabal/runner/: cache.py  curate.py  engine.py  prompt.py
backend/flowcabal/viking/: client.py  profiles.py  project.py
docs/: GUI_DEVELOPMENT.md  GUI_DEVELOPMENT_ZH.md  architecture_outlook.typ  design_doc.typ  gui-spec.md  gui-tech-stack.md  handwrite.typ  latest_design.typ  messagebus_feasibility.typ  new_design.typ  new_design_v4.typ  new_design_v5.typ  new_design_v6.typ  newest_design.txt  reference_design_analysis_zh.typ
docs/old/: new_design.typ  newest_design.txt  old_design_doc.typ  old_plan_doc.typ  test_report.md  tutorial.typ
docs/plan/: frontend-aesthetic-refactor.typ  frontend-refactoring-plan.typ
docs/reference/: openviking_report_zh.typ
flow-cabal/: index.html
flow-cabal/src/: App.svelte
flow-write/: index.html  tailwind.config.js
flow-write/src/: App.svelte  app.css
(+68 files in other folders)
