[project]
name = "flowcabal"
version = "0.1.0"
description = "FlowCabal — visual workflow editor for AI-assisted long-form writing"
requires-python = ">=3.13"
dependencies = [
    "openai",
    "pydantic>=2",
    "click",
    "aiosqlite",
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "cryptography",
    "tomli-w",
    "openviking>=0.1.17",
]

[project.scripts]
flowcabal = "flowcabal.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
